# game-of-life

./: .clang-format  CMakeList.txt  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/renderer/: renderer.cpp  renderer.hpp
src/terminal/: terminal.cpp  terminal.hpp
src/world/: world.cpp  world.hpp
